Oh boy, can of worms here. Add a web interface.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "author": "Ben Carlsson <qhiiyr@gmail.com>",
   "dependencies": {
     "openzwave": "0.0.32",
-    "irc": "0.3.6"
+    "irc": "0.3.6",
+    "express": "3.x"
   },
   "repository": {
     "type": "git",
