--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "openzwave": "0.0.x",
     "irc": "0.3.x",
+    "node-localstorage": "0.3.x",
+    "json-storage": "2.1.x",
     "express": "3.x",
     "stylus": "0.42.x",
-    "node-localstorage": "0.3.x",
-    "json-storage": "2.1.x"
+    "jade": "1.3.x"
   },
   "repository": {
     "type": "git",
