--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "json-storage": "2.1.x",
     "express": "3.x",
     "stylus": "0.42.x",
-    "jade": "1.3.x"
+    "jade": "1.3.x",
+    "node-request-caching": "0.0.x"
   },
   "repository": {
     "type": "git",
