--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "housebot",
+  "name":        "housebot",
   "description": "A Z-Wave helper and IRC bot",
-  "author": "Ben Carlsson <qhiiyr@gmail.com>",
+  "author":      "Ben Carlsson <qhiiyr@gmail.com>",
+  "engine":      "node 0.4.1",
+
   "dependencies": {
-    "openzwave": "0.0.x",
-    "irc": "0.3.x",
-    "node-localstorage": "0.3.x",
-    "json-storage": "2.1.x",
-    "express": "3.x",
-    "stylus": "0.42.x",
-    "jade": "1.3.x",
-    "node-request-caching": "0.0.x"
+    "openzwave":            "0.0.x",
+    "irc":                  "0.3.x",
+    "node-localstorage":    "0.3.x",
+    "json-storage":         "2.1.x",
+    "express":              "3.x",
+    "stylus":               "0.42.x",
+    "jade":                 "1.3.x",
+    "node-request-caching": "0.0.x",
+    "coffee-script":        "1.7.x",
+    "underscore":           "1.6.x"
   },
+
   "repository": {
     "type": "git",
-    "url": "http://github.com/glacials/housebot"
-  },
-  "engine": "node 0.4.1"
+    "url":  "http://github.com/glacials/housebot"
+  }
 }
